# midnight-node

./: .earthlyignore  .envrc  .envrc.local.example  .gitignore  .license_headers.sh  .midnight.txt  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Earthfile  README.md  deny.toml  ephemeral-env-image-upgrade.md  flake.nix  justfile  metadata.rs  partnerchains-dev.sh  qanet.diff  rust-toolchain.toml  shell.nix  sync-with-qanet.sh  sync-with-testnet-02.sh
indexer/indexer-standalone/: Cargo.toml  Dockerfile  config.yaml
indexer/indexer-standalone/src/: config.rs  main.rs
indexer/indexer-tests/: Cargo.toml  Dockerfile  e2e.graphql
indexer/indexer-tests/src/: e2e.rs
indexer/indexer-tests/tests/: native_e2e.rs
indexer/wallet-indexer/: Cargo.toml  Dockerfile  config.yaml
indexer/wallet-indexer/src/: application.rs  domain.rs  infra.rs  main.rs
ledger/: Cargo.toml  README.md  build.rs
ledger/helpers/: Cargo.toml  build.rs
ledger/helpers/src/: context.rs  input.rs  (+12 more)
ledger/src/: json.rs  lib.rs  storage.rs  utils.rs
ledger/test-data/: malformed_tx.json  simple-merkle-tree.compact
pallets/federated-authority-observation/: Cargo.toml  README.md
pallets/midnight/: Cargo.toml
pallets/native-token-observation/: Cargo.toml
pallets/upgrade/: Cargo.toml
primitives/cnight-observation/: Cargo.toml
primitives/federated-authority-observation/: Cargo.toml
primitives/mainchain-follower/: Cargo.toml  README.md
primitives/midnight/: Cargo.toml
primitives/native-token-observation/: Cargo.toml
primitives/upgrade/: Cargo.toml
primitives/upgrade-api/: Cargo.toml
relay/: Cargo.toml  README.md  commitment.cbor
relay/src/: authorities.rs  beefy.rs  beefy_keys.rs  cardano_encoding.rs  error.rs  helper.rs  helpers.rs  keccak.rs  main.rs  merkle.rs  mmr.rs  relayer.rs  types.rs
relay/test-data/: beefy-keys.json
res/: Cargo.toml  build.rs  weights-template.hbs
res/cfg/: default.toml  dev.toml  devnet.toml  node-dev-01.toml  node-dev.toml  preprod.toml  preview.toml  qanet.toml  testnet-02.toml
res/dev/: cnight-addresses.json  federated-authority-config.json  pc-chain-config.json
res/devnet/: addresses.json  chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  cngd-config.json  devnet-initialization.md  devnet_keys  federated-authority-config.json  governance.addr  governance.vkey  partner-chains-public-keys.json  pc-chain-config.json  pc-resources-config.json
res/genesis/: devnet_genesis.json  genesis_block_devnet.mn  genesis_block_node-dev-01.mn  genesis_block_preprod.mn  genesis_block_preview.mn  genesis_block_qanet.mn  genesis_block_testnet-02.mn  genesis_block_undeployed.mn  genesis_funding_wallets_devnet.txt  genesis_funding_wallets_shielded_devnet.txt  genesis_funding_wallets_shielded_qanet.txt  genesis_funding_wallets_shielded_testnet-02.txt  genesis_funding_wallets_shielded_undeployed.txt  genesis_funding_wallets_testnet-02.txt  genesis_funding_wallets_testnet.txt  genesis_funding_wallets_unshielded_devnet.txt  genesis_funding_wallets_unshielded_qanet.txt  genesis_funding_wallets_unshielded_testnet-02.txt  genesis_funding_wallets_unshielded_undeployed.txt  genesis_state_devnet.mn  genesis_state_node-dev-01.mn  genesis_state_preprod.mn  genesis_state_preview.mn  genesis_state_qanet.mn  genesis_state_testnet-02.mn  genesis_state_undeployed.mn  genesis_tx_devnet.mn  genesis_tx_qanet.mn  genesis_tx_testnet-02.mn  genesis_tx_undeployed.mn
res/mock-bridge-data/: beefy-keys-mock.json  default-registrations.json  qanet-mock.json  testnet-02-mock.json
res/node-dev/: addresses.json  chain-spec-raw.json  chain-spec.json  initial-authorities.json  partner-chains-cli-chain-config.json
res/node-dev-01/: chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  cnight-genesis.json  federated-authority-config.json  pc-chain-config.json
res/perfnet/: payment.addr  payment.vkey  pc-chain-config-updated.json  perfnet-chain-spec.json
res/preprod/: chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  cnight-addresses.json  cnight-genesis.json  federated-authority-config.json  pc-chain-config.json  pc-resources-config.json
res/preview/: chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  federated-authority-config.json  pc-chain-config.json
res/qanet/: addresses.json  chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  cnight-addresses.json  cnight-genesis.json  federated-authority-config.json  governance.addr  governance.vkey  pc-chain-config.json  pc-resources-config.json
res/src/: lib.rs  subxt_metadata.rs
res/test-claim-mint/: claim_mint_undeployed.mn
res/test-contract/: contract_address_devnet.mn  contract_address_devnet_invalid.mn  contract_address_testnet_invalid.mn  contract_address_undeployed.mn  contract_address_undeployed_invalid.mn  contract_tx_1_deploy_devnet.mn  contract_tx_1_deploy_undeployed.mn  contract_tx_2_store_devnet.mn  contract_tx_2_store_undeployed.mn  contract_tx_3_check_devnet.mn  contract_tx_3_check_undeployed.mn  contract_tx_4_change_authority_devnet.mn  contract_tx_4_change_authority_undeployed.mn
res/test-genesis-generator/: genesis_state_undeployed.mn  genesis_tx_undeployed.mn
res/test-tx-deserialize/: hex_serialized_tx_no_context.mn  hex_serialized_tx_with_context.mn  serialized_tx_no_context.mn  serialized_tx_with_context.mn  tx-testnet.mn
res/test-zswap/: README.md  zswap_undeployed.mn
res/testnet-02/: addresses.json  chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  federated-authority-config.json  governance.addr  governance.vkey  partner-chains-public-keys.json  pc-chain-config.json  pc-resources-config.json
res/tests/: check_chainstate_genesis.rs
runtime/: Cargo.toml  build.rs
runtime/common/: Cargo.toml
runtime/src/: authorship.rs  beefy.rs  check_call_filter.rs  constants.rs  currency.rs  governance.rs  lib.rs  migrations.rs  mock.rs  model.rs  session_manager.rs
tests/e2e/: Cargo.toml  README.md
util/documented/: Cargo.toml
util/toolkit/: .envrc  .gitignore  Cargo.toml  README.md
util/upgrader/: Cargo.toml
(+893 files in other folders)
