[package]
name = "midnight-beefy-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
mmr-rpc = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-consensus-beefy = { workspace = true, default-features = true }
sp-mmr-primitives = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
subxt = { workspace = true, default-features = true }

midnight-node-metadata = { workspace = true, default-features = true }
pallas = "0.33.0"

clap = { workspace = true, default-features = true, features = ["derive", "env"] }
hex = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
tokio = { workspace = true, default-features = true, features = ["time", "rt-multi-thread"]}