[package]
name = "midnight-node-res"
version = "0.1.0"
edition = "2024"
build = "build.rs"
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
chain-spec = [
    "pallet-cnight-observation/std",
    "std",
    "sp-core/std",
    "sc-service",
    "sp-session-validator-management",
    "sp-governed-map",
    "sidechain-domain"
]
test = ["chain-spec"]
std = []
runtime-benchmarks = []

[dependencies]
hex.workspace = true
midnight-serialize.workspace = true
hex-literal.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sp-core = { workspace = true, optional = true }
sc-service = { workspace = true, optional = true }
sp-session-validator-management = { workspace = true, optional = true }
sp-governed-map = { workspace = true, optional = true }
sidechain-domain = { workspace = true, optional = true }
pallet-cnight-observation = { workspace = true, optional = true }

[dev-dependencies]
mn-ledger = { workspace = true, features = ["proving", "test-utilities"] }
ledger-storage.workspace = true
base-crypto.workspace = true
midnight-serialize.workspace = true
transient-crypto.workspace = true
hex.workspace = true
toml.workspace = true

[build-dependencies]
walkdir = "2"

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["midnight-transient-crypto", "midnight-ledger", "midnight-storage", "midnight-base-crypto"]
