[package]
name          = "indexer-standalone"
version       = "1.0.1"
description   = "Consolidated Indexer for standalone execution"
edition       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[dependencies]
anyhow          = { workspace = true }
chain-indexer   = { path = "../chain-indexer", optional = true }
humantime-serde = { workspace = true }
indexer-api     = { path = "../indexer-api", optional = true }
indexer-common  = { path = "../indexer-common", optional = true }
log             = { workspace = true, features = [ "kv" ], optional = true }
secrecy         = { workspace = true, optional = true }
serde           = { workspace = true, features = [ "derive" ] }
serde_with      = { workspace = true }
tokio           = { workspace = true, features = [ "macros", "rt-multi-thread", "signal" ] }
wallet-indexer  = { path = "../wallet-indexer", optional = true }

[features]
cloud = [  ]
standalone = [
    "chain-indexer/standalone",
    "indexer-api/standalone",
    "indexer-common/standalone",
    "log",
    "secrecy",
    "wallet-indexer/standalone",
]
