[package]
name          = "indexer-tests"
version       = "0.1.0"
description   = "Tests for the Midnight Indexer"
edition       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[dependencies]
anyhow            = { workspace = true }
clap              = { workspace = true, features = [ "derive" ] }
derive_more       = { workspace = true, features = [ "display" ] }
futures           = { workspace = true }
graphql_client    = { workspace = true, features = [ "reqwest-rustls" ] }
indexer-api       = { path = "../indexer-api" }
indexer-common    = { path = "../indexer-common" }
itertools         = { workspace = true }
reqwest           = { workspace = true, features = [ "json", "rustls-tls" ] }
serde             = { workspace = true, features = [ "derive" ] }
serde_json        = { workspace = true }
tokio             = { workspace = true, features = [ "macros", "process", "rt-multi-thread" ] }
tokio-tungstenite = { workspace = true, features = [ "rustls-tls-webpki-roots" ] }

[dev-dependencies]
fs_extra               = { workspace = true }
nix                    = { workspace = true, features = [ "signal" ] }
tempfile               = { workspace = true }
testcontainers         = { workspace = true }
testcontainers-modules = { workspace = true, features = [ "postgres" ] }

[features]
cloud      = [  ]
standalone = [  ]
