[package]
name = "midnight-node-ledger-helpers"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
hex.workspace = true
mn-ledger = { workspace = true, features = ["proving", "test-utilities"], optional = true }
base-crypto = { workspace = true, optional = true }
coin-structure = { workspace = true, optional = true }
onchain-runtime = { workspace = true, optional = true }
midnight-serialize = { workspace = true, optional = true }
ledger-storage = { workspace = true, optional = true }
transient-crypto = { workspace = true, optional = true }
zswap = { workspace = true, optional = true }
zkir = { workspace = true, optional = true }

mn-ledger-hf = { workspace = true, features = ["proving", "test-utilities"], optional = true }
base-crypto-hf = { workspace = true, optional = true }
coin-structure-hf = { workspace = true, optional = true }
onchain-runtime-hf = { workspace = true, optional = true }
midnight-serialize-hf = { workspace = true, optional = true }
ledger-storage-hf = { workspace = true, optional = true }
transient-crypto-hf = { workspace = true, optional = true }
zswap-hf = { workspace = true, optional = true }
zkir-hf = { workspace = true, optional = true }

rand = { workspace = true, features = ["small_rng"] }
lazy_static.workspace = true
itertools = { workspace = true, features = ["use_alloc"] }
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
bip32.workspace = true
derive-where.workspace = true
serde = { workspace = true, features = ["derive"] }
bech32 = "0.11.0"
bip39 = "2.0.0"
toml.workspace = true

[features]
default = ["std"]
can-panic = []
std = [
	"mn-ledger",
	"base-crypto",
	"coin-structure",
	"onchain-runtime",
	"midnight-serialize",
	"ledger-storage",
	"transient-crypto",
	"zswap",
    "zkir",
	"mn-ledger-hf",
	"base-crypto-hf",
	"coin-structure-hf",
	"onchain-runtime-hf",
	"midnight-serialize-hf",
	"ledger-storage-hf",
	"transient-crypto-hf",
	"zswap-hf",
    "zkir-hf"
]
erase-proof = []
test-utils = []
