[package]
name = "pallet-native-token-observation"
version = "1.4.0"
edition = "2024"
description = "Pallet responsible for handling changes to the illiquid supply of the native token on main chain."
license = "Apache-2.0"

[dependencies]
frame-support.workspace = true
frame-system.workspace = true
pallet-timestamp.workspace = true
sidechain-domain.workspace = true
midnight-primitives.workspace = true
midnight-primitives-mainchain-follower.workspace = true
midnight-primitives-native-token-observation.workspace = true
midnight-node-ledger = { default-features = false, workspace = true }
parity-scale-codec.workspace = true
scale-info.workspace = true
log.workspace = true
sp-core.workspace = true
hex.workspace = true
derive-new.workspace= true


[dev-dependencies]
sp-io.workspace = true
rand = { version = "^0.8.4", features = ["std_rng"] }
midnight-node-res = { features = ["test", "chain-spec"], workspace = true }
pallet-midnight.workspace = true
pallet-midnight-system.workspace = true
test-log = {version = "0.2"}
midnight-node-ledger-helpers.workspace = true
tempfile.workspace = true

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-core/std",
    "parity-scale-codec/std",
    "midnight-primitives/std",
    "midnight-primitives-mainchain-follower/std",
    "midnight-primitives-native-token-observation/std",
    "derive-new/std"
]
mock = []

[package.metadata.cargo-shear]
ignored = ["scale-info", "parity-scale-codec", "sp-io"]
