[package]
name = "pallet-upgrade"
version = "0.1.0"
edition = "2024"
description = "Midnight runtime upgrade pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec.workspace = true
frame-support.workspace = true
frame-system.workspace = true
scale-info = { workspace = true, features = ["derive"] }
midnight-primitives-upgrade.workspace = true
sp-arithmetic.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-staking.workspace = true
sp-std.workspace = true
sp-storage.workspace = true
sp-runtime.workspace = true
sp-version.workspace = true
itertools = { workspace = true, default-features = false, features = ["use_alloc"] }

frame-benchmarking.workspace = true

[dev-dependencies]
assert_matches.workspace = true
pallet-preimage.workspace = true
pallet-partner-chains-session = { workspace = true, default-features = true }
pallet-scheduler = { workspace = true, default-features = true }
sp-consensus-aura = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "midnight-primitives-upgrade/std",
    "sp-arithmetic/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-staking/std",
    "sp-storage/std",
    "sp-version/std",
    "pallet-scheduler/std"
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

# TODO: delete when pallet::hooks no longer references this.
try-runtime = []
