[package]
name = "midnight-primitives-cnight-observation"
version = "0.1.0"
edition = "2024"
description = "Midnight cNight observation primitives"
license-file.workspace = true

[dependencies]
sp-api.workspace = true
sp-inherents.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
serde = { workspace = true , optional = true }
hex = { workspace = true }
thiserror = { workspace = true, optional = true }
sidechain-domain.workspace = true

[features]
default = ["std"]
std = [
    "hex/serde",
    "hex/std",
    "sp-api/std",
    "sp-inherents/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "serde",
    "thiserror",
    "sidechain-domain/std"
]
