[package]
name = "midnight-primitives-federated-authority-observation"
version = "0.1.0"
edition = "2024"
description = "Primitives for federated authority observation"
license-file.workspace = true

[dependencies]
parity-scale-codec.workspace = true
scale-info.workspace = true
sp-core.workspace = true
sp-consensus-aura.workspace = true
sp-inherents.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
sidechain-domain.workspace = true
serde = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-consensus-aura/std",
    "sp-inherents/std",
    "sp-runtime/std",
    "sp-std/std",
    "sidechain-domain/std",
    "serde",
]

[package.metadata.cargo-shear]
ignored = ["scale-info", "parity-scale-codec"]
